# BoatRaceSharedTask

./: README.md
baseline/: CMakeLists.txt  README.md  main.cpp
baseline/src/: mlp.h  myutils.h  player.h  race.h  str2id.h
